Fixed issue with overlap resize icon.

--- a/markos/_SoftwareContainer/css/_SoftwareContainer.css
+++ b/markos/_SoftwareContainer/css/_SoftwareContainer.css
@@ -1,5 +1,5 @@
 .markos-softwarecontainer {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -57,6 +57,10 @@
     position: absolute;
     bottom: -15px;
     right: -15px;
+}
+
+.markos-softwarecontainer .dojoxResizeHandle {
+    z-index: unset;
 }
 
 @media (min-width: 550px ) {
